AR_RU_02 : header : saving changes

--- a/index.html
+++ b/index.html
@@ -12,31 +12,29 @@
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
-        <!-- This is for demo purposes only, will be replaced in other branches -->
+        <!-- Header section -->
 
-        <div class="circular-md">
-            Some text here of circular std family medium
+        <div class="header">
+            <div class="header__logo">
+                <span class="icon-Vector-9"></span>
+            </div>
+            <div class="header__hamburger">
+                <span class="icon-Vector"></span>
+            </div>
+            <ul class="header__nav-links">
+                <li>Home</li>
+                <li>Discover</li>
+                <li>Special Deals</li>
+                <li>Contact</li>
+            </ul>
+
+            <div class="header__btns auth">
+                <button class="auth__login">Login</button>
+                <button class="auth__signup">Sign up</button>
+            </div>
         </div>
 
-        <div class="circular-bold1">Some text of circular std family small</div>
-
-        <div class="circular-bold2">Some text of circular large family</div>
-
-        <div class="sub-heading">some text here of inter font family</div>
-        <span class="icon-play-circle5-1 purple"></span>
-        <span class="icon-Vector-7 yellow"></span>
-        <img src="/assets/images/hero/company4.png" alt="" />
-        <div class="orange">Some text of orange color</div>
-        <span class="icon-Group-8"
-            ><span class="path1 purple"></span><span class="path2 white"></span
-        ></span>
-
-        <div class="pink">Some text of pink color</div>
-        <div class="yellow">Some text of yellow color</div>
-        <div class="purple">Some text of purple color</div>
-        <script type="module" src="./src/script/index.js"></script>
-
-        <!-- For browsers that have JS diabled  -->
+         <!-- For browsers that have JS diabled  -->
         <noscript>
             <p>
                 Please enable JavaScript to view the full content of this page,
