AR_RU_02 :  header : saving changes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
                 <button class="auth__login">Login</button>
                 <button class="auth__signup">Sign up</button>
             </div>
+
+            <div class="header__placeholder"></div>
+
+            <div class="header__sidebar">
+                <div>Home</div>
+                <div>Discover</div>
+                <div>Special Deals</div>
+                <div>Contact</div>
+            </div>
         </div>
 
          <!-- For browsers that have JS diabled  -->
@@ -43,5 +52,7 @@
                 </a>
             </p>
         </noscript>
+
+        <script type="module" src="./src/script/index.js"></script>
     </body>
 </html>
