--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
         </noscript>
 
         <script type="module" src="./src/script/index.js"></script>
+
+        <script src="./src/script/index.js" type="module"></script>
     </body>
 </html>
