AR_RU_01 : Base setup : added some more font files, fixed typos, renamed some files for better understanding

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <title>Travel website</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./src/styles/main.css" />
     </head>
     <body>
-        <div class="heading">Some text here of circular std family</div>
+        <div class="heading">
+            Some text whvdvwjbd here of circular std family
+        </div>
         <div class="sub-heading">some text here of inter font family</div>
         <span class="icon-play-circle5-1"></span>
         <span class="icon-Vector-7"></span>
-        <img src="/public/assets/images/hero/company4.png" alt="" />
+        <img src="/assets/images/hero/company4.png" alt="" />
         <div class="orange">Some text of orange color</div>
         <span class="icon-Group-8"
             ><span class="path1"></span><span class="path2"></span
@@ -20,5 +21,7 @@
         <div class="yellow">Some text of yellow color</div>
         <div class="purple">Some text of purple color</div>
         <script type="module" src="./src/script/index.js"></script>
+
+        <script src="./src/script/index.js" type="module"></script>
     </body>
 </html>
