--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <div class="purple">Some text of purple color</div>
         <script type="module" src="./src/script/index.js"></script>
 
-        <script src="./src/script/index.js" type="module"></script>
+        <noscript>Your browser has JS disabled.</noscript>
     </body>
 </html>
