AR_RU_01 : Base setup : added a noscript tag with an appropriate message

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
 
         <script type="module" src="./src/script/index.js"></script>
 
-        <script src="./src/script/index.js" type="module"></script>
+        <noscript>Your browser has JS disabled.</noscript>
     </body>
 </html>
