--- a/index.html
+++ b/index.html
@@ -13,35 +13,45 @@
     </head>
     <body>
         <!-- Header section -->
-
-        <div class="header">
+        <div class="blur-overlay"></div>
+        <header class="header">
             <div class="header__logo">
                 <span class="icon-Vector-9"></span>
             </div>
-            <div class="header__hamburger">
+            <button class="header__hamburger">
                 <span class="icon-Vector"></span>
-            </div>
+            </button>
             <ul class="header__nav-links">
-                <li>Home</li>
-                <li>Discover</li>
-                <li>Special Deals</li>
-                <li>Contact</li>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Discover</a>
+                </li>
+                <li>
+                    <a href="">Special Deals</a>
+                </li>
+                <li>
+                    <a href="">Contact</a>
+                </li>
             </ul>
 
             <div class="header__btns auth">
-                <button class="auth__login">Login</button>
-                <button class="auth__signup">Sign up</button>
+                <button class="auth__login">Log In</button>
+                <button class="auth__signup">Sign Up</button>
             </div>
 
             <div class="header__placeholder"></div>
 
             <div class="header__sidebar">
-                <div>Home</div>
-                <div>Discover</div>
-                <div>Special Deals</div>
-                <div>Contact</div>
+                <a href=""><div>Home</div></a>
+                <a href=""><div>Discover</div></a>
+                <a href=""><div>Special Deals</div></a>
+                <a href=""><div>Contact</div></a>
+                <a href=""><div>Login</div></a>
+                <a href=""><div>Sign Up</div></a>
             </div>
-        </div>
+        </header>
 
          <!-- For browsers that have JS diabled  -->
         <noscript>
