--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
-        <!-- Header section -->
+        <!-- blur-overlay to make the background blur when sidebar is open -->
         <div class="blur-overlay"></div>
+
+        <!-- Header section -->
         <header class="header">
+            <!-- Logo of the website -->
             <div class="header__logo">
                 <span class="icon-Vector-9"></span>
             </div>
+
+            <!-- Hamburger -->
             <button class="header__hamburger">
                 <span class="icon-Vector"></span>
             </button>
+
+            <!-- Header navigation links -->
             <ul class="header__nav-links">
                 <li>
                     <a href="">Home</a>
@@ -36,13 +43,16 @@
                 </li>
             </ul>
 
+            <!-- Buttons for login and sign up -->
             <div class="header__btns auth">
                 <button class="auth__login">Log In</button>
                 <button class="auth__signup">Sign Up</button>
             </div>
 
+            <!-- Placeholder is added here to make sure the logo is always centered -->
             <div class="header__placeholder"></div>
 
+            <!-- Header sidebar : opens when clicked on the hamburger -->
             <div class="header__sidebar">
                 <a href=""><div>Home</div></a>
                 <a href=""><div>Discover</div></a>
