--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Travel website</title>
+        <title>Travlog</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Travel website, providing services like holiday packages, luxury hotels, premium airlines and much more"
+        />
     </head>
     <body>
-        <div class="heading">
-            Some text whvdvwjbd here of circular std family
+        <!-- This is for demo purposes only, will be replaced in other branches -->
+
+        <div class="circular-md">
+            Some text here of circular std family medium
         </div>
+
+        <div class="circular-bold1">Some text of circular std family small</div>
+
+        <div class="circular-bold2">Some text of circular large family</div>
+
         <div class="sub-heading">some text here of inter font family</div>
         <span class="icon-play-circle5-1"></span>
         <span class="icon-Vector-7"></span>
@@ -22,6 +33,16 @@
         <div class="purple">Some text of purple color</div>
         <script type="module" src="./src/script/index.js"></script>
 
-        <noscript>Your browser has JS disabled.</noscript>
+        <!-- For browsers that have JS diabled  -->
+        <noscript>
+            <p>
+                Please enable JavaScript to view the full content of this page,
+                Here's how to do that
+                <a href="https://support.google.com/adsense/answer/12654?hl=en">
+                    Enable JS in your browser
+                </a>
+            </p>
+            .
+        </noscript>
     </body>
 </html>
