AR_RU_01 : base setup : moved breakpoint.scss from mixin folder to variable folder, renamed _font-face to font

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             name="description"
             content="Travel website, providing services like holiday packages, luxury hotels, premium airlines and much more"
         />
+        <meta name="keywords" content="travel, hotels, holiday, vacation" />
     </head>
     <body>
         <!-- This is for demo purposes only, will be replaced in other branches -->
