AR_RU_02 : header : added mixins, variables

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <!-- Header section -->
         <header class="header">
             <!-- Website logo -->
-            <div class="header__logo">
+            <a class="header__logo" href="">
                 <span class="icon-Vector-9"></span>
-            </div>
+            </a>
 
             <!-- Hamburger menu icon -->
             <button class="header__hamburger" aria-label="Open sidebar">
@@ -44,18 +44,16 @@
             <!-- Placeholder to center logo on tablet layout -->
             <div class="header__placeholder"></div>
 
-            <!-- Sidebar (shown on mobile/tablet via hamburger) -->
+            <!-- Sidebar (shown on mobile & tbalet by hamburger) -->
             <div class="header__sidebar">
                 <a href=""><div>Home</div></a>
                 <a href=""><div>Discover</div></a>
                 <a href=""><div>Special Deals</div></a>
                 <a href=""><div>Contact</div></a>
                 <a href=""><div>Login</div></a>
-                <a href=""><div>Sign Up</div></a>
+                <a href="" class="signup"><div>Sign Up</div></a>
             </div>
         </header>
-
-        
 
         <script type="module" src="./src/script/index.js"></script>
 
