AR_RU_01 : base setup : added proper documentation, more variables

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             content="Travel website, providing services like holiday packages, luxury hotels, premium airlines and much more"
         />
         <meta name="keywords" content="travel, hotels, holiday, vacation" />
+        <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
         <!-- This is for demo purposes only, will be replaced in other branches -->
@@ -40,10 +41,8 @@
                 Please enable JavaScript to view the full content of this page,
                 Here's how to do that
                 <a href="https://support.google.com/adsense/answer/12654?hl=en">
-                    Enable JS in your browser
                 </a>
             </p>
-            .
         </noscript>
     </body>
 </html>
