AR_RU_03 : Hero : saving changes to go fix header

--- a/index.html
+++ b/index.html
@@ -48,6 +48,45 @@
             </nav>
         </header>
 
+        <!-- Hero Section -->
+        <section class="hero">
+            <!-- Hero section main image container -->
+            <div class="hero__img">
+                <img
+                    src="/assets/images/hero/hero-section-main-image.png"
+                    alt=""
+                />
+            </div>
+
+            <!-- Hero section main content -->
+            <div class="hero__content">
+                <!-- Hero section explore the world  button -->
+                <button class="hero__explore-btn explore-btn">
+                    <span class="explore-btn__content">Explore the world!</span>
+                    <span class="icon-work-1"></span>
+                </button>
+
+                <h1 class="hero__heading">
+                    Travel
+                    <span>top destination</span>
+                    of the world
+                </h1>
+
+                <h3 class="hero__sub-heading">
+                    We always make our customer happy by providing as many
+                    choices as possible
+                </h3>
+
+                <div class="hero__btns actions">
+                    <button class="actions__get-started">Get Started</button>
+                    <button class="actions__watch-demo watch-demo">
+                        <span class="icon-play-circle5-1"></span>
+                        <span class="watch-demo__text">Watch Demo</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
         <script type="module" src="./src/script/index.js"></script>
 
          <!-- For browsers that have JS diabled  -->
