AR_RU_03 : Hero : displayed traingles image on tablet and desktop

--- a/index.html
+++ b/index.html
@@ -84,6 +84,32 @@
                         <span class="watch-demo__text">Watch Demo</span>
                     </button>
                 </div>
+
+                <div class="hero__triangles">
+                    <img
+                        src="./public/assets/images/hero/triangles.png"
+                        alt=""
+                    />
+                </div>
+            </div>
+        </section>
+
+        <!-- Co-partners -->
+        <section class="co-partners">
+            <div class="co-partners__img">
+                <img src="/assets/images/hero/company1.png" alt="" />
+            </div>
+            <div class="co-partners__img">
+                <img src="/assets/images/hero/company2.png" alt="" />
+            </div>
+            <div class="co-partners__img">
+                <img src="/assets/images/hero/company3.png" alt="" />
+            </div>
+            <div class="co-partners__img">
+                <img src="/assets/images/hero/company4.png" alt="" />
+            </div>
+            <div class="co-partners__img">
+                <img src="/assets/images/hero/company5.png" alt="" />
             </div>
         </section>
 
