AR_RU_03 : Hero : added alt text to images, resolved coderabbitai issues

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="hero__img">
                 <img
                     src="/assets/images/hero/hero-section-main-image.png"
-                    alt=""
+                    alt="Collage of travel-themed images: a coastal staircase, a traveler sitting with a backpack in the mountains, and a person photographing a cityscape."
                 />
             </div>
 
@@ -87,8 +87,8 @@
 
                 <div class="hero__triangles">
                     <img
-                        src="./public/assets/images/hero/triangles.png"
-                        alt=""
+                        src="/assets/images/hero/triangles.png"
+                        alt="Group of 10 orange triangles pointing upwards."
                     />
                 </div>
             </div>
@@ -97,19 +97,34 @@
         <!-- Co-partners -->
         <section class="co-partners">
             <div class="co-partners__img">
-                <img src="/assets/images/hero/company1.png" alt="" />
+                <img
+                    src="/assets/images/hero/company1.png"
+                    alt="Company logo of tripadvisor, it's a logo and text(lowercase), logo is shaped like an owl."
+                />
             </div>
             <div class="co-partners__img">
-                <img src="/assets/images/hero/company2.png" alt="" />
+                <img
+                    src="/assets/images/hero/company2.png"
+                    alt="Company logo of Expedia, it's a logo and text, the logo is of a airplane taking off"
+                />
             </div>
             <div class="co-partners__img">
-                <img src="/assets/images/hero/company3.png" alt="" />
+                <img
+                    src="/assets/images/hero/company3.png"
+                    alt="Company logo of Booking.com, bold text only"
+                />
             </div>
             <div class="co-partners__img">
-                <img src="/assets/images/hero/company4.png" alt="" />
+                <img
+                    src="/assets/images/hero/company4.png"
+                    alt="Company logo of airbnb, logo and text(lowercase), the logo is shaped like uppercase a"
+                />
             </div>
             <div class="co-partners__img">
-                <img src="/assets/images/hero/company5.png" alt="" />
+                <img
+                    src="/assets/images/hero/company5.png"
+                    alt="Company logo of Rbitz , logo and text(uppercase and bold), the logo is 2 arrows pointing towards end of each other, kind of like a loop."
+                />
             </div>
         </section>
 
