--- a/index.html
+++ b/index.html
@@ -140,6 +140,81 @@
             </div>
         </section>
 
+        <!-- Services section -->
+        <secion class="services">
+            <div class="services__content">
+                <!-- Services heading -->
+                <div class="services__section-title section-title">
+                    SERVICES
+                </div>
+
+                <!-- Services sub heading -->
+                <div class="services__section-sub-heading section-sub-heading">
+                    Our top value categories for you
+                </div>
+            </div>
+
+            <!-- Services card container -->
+            <div class="services__cards-container">
+                <!-- Services tour guide card -->
+                <div class="services__card-1 services-card-1">
+                    <!-- Services card 1 image -->
+                    <div class="services-card-1__img">
+                        <img
+                            src="/assets/images/services/destination.png"
+                            alt="Globe with two pin points connected by dotted line."
+                        />
+                    </div>
+
+                    <!-- Services card 1 heading -->
+                    <div class="services-card-1__title">Best Tour Guide</div>
+
+                    <!-- Services card 1 description -->
+                    <div class="services-card-1__desc">
+                        What looked like a small patch of purple grass, above
+                        five feet.
+                    </div>
+                </div>
+
+                <div class="services__card-2 services-card-2">
+                    <!-- Services card 2 image -->
+                    <div class="services-card-2__img">
+                        <img
+                            src="/assets/images/services/booking.png"
+                            alt="Icon of a transaction and a check on calender depicting easy booking."
+                        />
+                    </div>
+
+                    <!-- Services card 2 heading -->
+                    <div class="services-card-2__title">Easy Booking</div>
+
+                    <!-- Services card 2 description -->
+                    <div class="services-card-2__desc">
+                        Square, was moving across the sand in their direction.
+                    </div>
+                </div>
+
+                <div class="services__card-3 services-card-3">
+                    <!-- Services card 3 image -->
+                    <div class="services-card-3__img">
+                        <img
+                            src="/assets/images/services/cloudy.png"
+                            alt="Icon of a cloud with sun on its corner."
+                        />
+                    </div>
+
+                    <!-- Services card 3 heading -->
+                    <div class="services-card-3__title">Weather Forecast</div>
+
+                    <!-- Services card 3 description -->
+                    <div class="services-card-3__desc">
+                        What looked like a small patch of purple grass, above
+                        five feet.
+                    </div>
+                </div>
+            </div>
+        </secion>
+
         <script type="module" src="./src/script/index.js"></script>
 
          <!-- For browsers that have JS diabled  -->
