AR_RU_01 : Base setup : Enhanced folder structure

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         <div class="circular-bold2">Some text of circular large family</div>
 
         <div class="sub-heading">some text here of inter font family</div>
-        <span class="icon-play-circle5-1"></span>
-        <span class="icon-Vector-7"></span>
+        <span class="icon-play-circle5-1 purple"></span>
+        <span class="icon-Vector-7 yellow"></span>
         <img src="/assets/images/hero/company4.png" alt="" />
         <div class="orange">Some text of orange color</div>
         <span class="icon-Group-8"
-            ><span class="path1"></span><span class="path2"></span
+            ><span class="path1 purple"></span><span class="path2 white"></span
         ></span>
+
         <div class="pink">Some text of pink color</div>
         <div class="yellow">Some text of yellow color</div>
         <div class="purple">Some text of purple color</div>
