AR_RU_02 : Header : Fixed nav-links hover state

--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
-        <!-- Blur overlay to apply blur effect when sidebar is open -->
-
         <!-- Header section -->
         <header class="header">
             <!-- Website logo -->
             <a href="#" class="header__logo">
-                <span class="icon-Vector-9"></span>
+                <span class="icon-Vector-9 gradient-left-to-right"></span>
             </a>
 
             <!--Hamburger button-->
             <button class="header__hamburger">
-                <span class="icon-Vector"></span>
+                <span class="icon-Vector purple"></span>
             </button>
 
             <!--Navigation Links-->
