AR_RU_03 : Services section : Made services section pixel perfect

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- Hero section main image container -->
             <div class="hero__img">
                 <img
-                    src="/assets/images/hero/hero-section-main-image.png"
+                    src="/assets/images/hero/hero-section-main-img.png"
                     alt="Collage of travel-themed images: a coastal staircase, a traveler sitting with a backpack in the mountains, and a person photographing a cityscape."
                 />
             </div>
@@ -61,14 +61,14 @@
             <!-- Hero section main content -->
             <div class="hero__content">
                 <!-- Hero section explore the world  button -->
-                <button class="hero__explore-btn explore-btn">
+                <button class="hero__explore-btn explore-btn pink">
                     <span class="explore-btn__content">Explore the world!</span>
                     <span class="icon-work-1"></span>
                 </button>
 
                 <h1 class="hero__heading">
                     Travel
-                    <span>top destination</span>
+                    <span class="pink">top destination</span>
                     of the world
                 </h1>
 
@@ -80,7 +80,7 @@
                 <div class="hero__btns actions">
                     <button class="actions__get-started">Get Started</button>
                     <button class="actions__watch-demo watch-demo">
-                        <span class="icon-play-circle5-1"></span>
+                        <span class="icon-play-circle5-1 purple"></span>
                         <span class="watch-demo__text">Watch Demo</span>
                     </button>
                 </div>
@@ -130,7 +130,7 @@
 
         <script type="module" src="./src/script/index.js"></script>
 
-         <!-- For browsers that have JS diabled  -->
+        <!-- For browsers that have JS diabled  -->
         <noscript>
             <p>
                 Please enable JavaScript to view the full content of this page,
