--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Travlog</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Travel website, providing services like holiday packages, luxury hotels, premium airlines and much more"
+        />
+        <meta name="keywords" content="travel, hotels, holiday, vacation" />
+        <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
-        <div>Hello World</div>
+        <!-- This is for demo purposes only, will be replaced in other branches -->
+
+        <div class="circular-md">
+            Some text here of circular std family medium
+        </div>
+
+        <div class="circular-bold1">Some text of circular std family small</div>
+
+        <div class="circular-bold2">Some text of circular large family</div>
+
+        <div class="sub-heading">some text here of inter font family</div>
+        <span class="icon-play-circle5-1 purple"></span>
+        <span class="icon-Vector-7 yellow"></span>
+        <img src="/assets/images/hero/company4.png" alt="" />
+        <div class="orange">Some text of orange color</div>
+        <span class="icon-Group-8"
+            ><span class="path1 purple"></span><span class="path2 white"></span
+        ></span>
+
+        <div class="pink">Some text of pink color</div>
+        <div class="yellow">Some text of yellow color</div>
+        <div class="purple">Some text of purple color</div>
         <script type="module" src="./src/script/index.js"></script>
+
+        <!-- For browsers that have JS diabled  -->
+        <noscript>
+            <p>
+                Please enable JavaScript to view the full content of this page,
+                Here's how to do that
+                <a href="https://support.google.com/adsense/answer/12654?hl=en">
+                </a>
+            </p>
+        </noscript>
     </body>
 </html>
