AR_RU_03 : Hero section : Made use of components everywhere

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </header>
 
         <!-- Hero Section -->
-        <section class="hero">
+        <section class="container hero">
             <!-- Hero section main image container -->
             <div class="hero__img">
                 <img
@@ -61,35 +61,40 @@
             <!-- Hero section main content -->
             <div class="hero__content">
                 <!-- Hero section explore the world  button -->
-                <button class="hero__explore-btn explore-btn pink">
-                    <span class="explore-btn__content">Explore the world!</span>
-                    <span class="icon-work-1"></span>
+                <button
+                    class="hero__explore-button pink-text primary-button circular-md"
+                >
+                    <span class="explore-button__content"
+                        >Explore the world!</span
+                    >
+                    <span class="icon-work-1 explore-button__icon"></span>
                 </button>
 
-                <h1 class="hero__heading">
+                <h1 class="hero__heading circular-md">
                     Travel
-                    <span class="pink">top destination</span>
+                    <span class="pink-text">top destination</span>
                     of the world
                 </h1>
 
-                <h3 class="hero__sub-heading">
+                <h3 class="hero__sub-heading grey-text inter">
                     We always make our customer happy by providing as many
                     choices as possible
                 </h3>
 
-                <div class="hero__btns actions">
-                    <button class="actions__get-started">Get Started</button>
-                    <button class="actions__watch-demo watch-demo">
-                        <span class="icon-play-circle5-1 purple"></span>
+                <div class="hero__buttons actions">
+                    <button
+                        class="actions__get-started primary-button white-text purple-bg circular-md"
+                    >
+                        Get Started
+                    </button>
+                    <button
+                        class="actions__watch-demo watch__demo primary-button purple-text circular-md"
+                    >
+                        <span
+                            class="icon-play-circle5-1 watch-demo__icon"
+                        ></span>
                         <span class="watch-demo__text">Watch Demo</span>
                     </button>
-                </div>
-
-                <div class="hero__triangles">
-                    <img
-                        src="/assets/images/hero/triangles.png"
-                        alt="Group of 10 orange triangles pointing upwards."
-                    />
                 </div>
             </div>
         </section>
