AR_RU_02 : Header : Made all the required changes such as using components, utility classes, and hadnling broken UI

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     </head>
     <body>
         <!-- Header section -->
-        <header class="header white-bg">
+        <header class="header white-bg container">
             <!-- Website logo -->
             <a href="#" class="header__logo">
-                <span class="icon-Vector-9 gradient-purple-to-pink"></span>
+                <i class="icon-Vector-9 gradient-purple-to-pink"></i>
             </a>
 
             <!--Hamburger button-->
             <button class="header__hamburger js-header__hamburger">
-                <span class="icon-Vector purple-text js-sidebar__icon"></span>
+                <i class="icon-Vector purple-text js-sidebar__icon"></i>
             </button>
 
             <!--Navigation Links-->
             <nav
-                class="header__nav-links js-header__nav-links nav-links white-bg grey-text circular-md font-weight-400"
+                class="js-header__nav-links nav-links white-bg grey-text circular-md font-weight-400"
             >
                 <div
                     class="nav-links__container white-bg js-nav-links__container"
@@ -50,9 +50,6 @@
                     </button>
                 </div>
             </nav>
-
-            <!--Placeholder div to center logo in tablet-->
-            <!-- <div class="header__placeholder"></div> -->
         </header>
 
         <script type="module" src="./src/script/index.js"></script>
