AR_RU_03 : Hero : MAde hero section using all the components and utility classes, fixed responsiveness issues

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         Get Started
                     </button>
                     <button
+                        class="actions__watch-demo watch__demo purple-text circular-md"
                         class="actions__watch-demo watch__demo button button--secondary"
                     >
                         <i
