AR_RU_03 : Hero : MAde hero section using all the components and utility classes, fixed responsiveness issues

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 
             <!-- Hero section main content -->
             <div class="hero__content">
+                <!-- Triangles  -->
+                <div class="hero__triangles">
+                    <img src="/assets/images/hero/triangles.png" alt="" />
+                </div>
+
                 <!-- Hero section explore the world  button -->
                 <button
                     class="hero__explore-button pink-text primary-button circular-md"
@@ -67,7 +72,7 @@
                     <span class="explore-button__content"
                         >Explore the world!</span
                     >
-                    <span class="icon-work-1 explore-button__icon"></span>
+                    <i class="icon-work-1 explore-button__icon"></i>
                 </button>
 
                 <h1 class="hero__heading circular-md">
@@ -83,16 +88,14 @@
 
                 <div class="hero__buttons actions">
                     <button
-                        class="actions__get-started primary-button white-text purple-bg circular-md"
+                        class="actions__get-started white-text purple-bg circular-md"
                     >
                         Get Started
                     </button>
                     <button
-                        class="actions__watch-demo watch__demo primary-button purple-text circular-md"
+                        class="actions__watch-demo watch__demo purple-text circular-md"
                     >
-                        <span
-                            class="icon-play-circle5-1 watch-demo__icon"
-                        ></span>
+                        <i class="icon-play-circle5-1 watch-demo__icon"></i>
                         <span class="watch-demo__text">Watch Demo</span>
                     </button>
                 </div>
@@ -100,7 +103,7 @@
         </section>
 
         <!-- Co-partners -->
-        <section class="co-partners">
+        <section class="co-partners container">
             <div class="co-partners__img">
                 <img
                     src="/assets/images/hero/company1.png"
